tests/valid/distinct_type_cast.lang
typedef MyInt distinct int;

fn main() {
    var a: int = 123;
    var b: MyInt = cast(MyInt)a;
    a = cast(int)b;
}
