tests/invalid/invalid_enum_assign.lang
typedef MyEnum enum u32 {
    one = 1,
};

fn main() {
    var my_enum: MyEnum = 1;
}
